Implement user profile management and low stock product retrieval
- Add UserController for user profile retrieval, update, and deletion.
- Introduce UpdateUserRequest DTO for user profile updates.
- Create LowStockProductResponse DTO for low stock product details.
- Enhance ProductController with low stock product retrieval endpoint.
- Update Product entity to include desired profit margin and minimum stock.
- Modify ProductRepository to adjust low stock query condition.
- Update ProductMapper to handle new fields in product requests.
- Refactor security configuration to allow authentication via username or email.
- Add tests for new features and ensure existing functionality remains intact.